# hsr-assistant-driver

./: README.md  pyproject.toml
hsr_assistant_driver/: driver.py  march_7th_assistant.py  mcp_server.py  server.py
setup/: auto-simulated-universe.patch  march-7th-assistant.patch  prepare_subproj.py
